# jessie

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  mcp.rs
src/components/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  ModelSelector.tsx  SettingsPanel.tsx  Sidebar.tsx  ToastViewport.tsx
src/components/common/: ConfirmDialog.tsx
src/components/settings/: AdvancedSection.tsx  AppearanceSection.tsx  DataSection.tsx  GeneralSection.tsx  McpSection.tsx  MemorySection.tsx  ModelsSection.tsx  SettingCard.tsx  SettingToggle.tsx  SettingsSidebar.tsx  ToolsSection.tsx  Tooltip.tsx  types.ts
src/lib/: appError.ts  i18n.ts  localPersistence.ts  mcpClient.ts  mcpHost.test.ts  mcpHost.ts  memoryEngine.ts  memoryQuality.test.ts  memoryQuality.ts  openrouter.ts  reliability.test.ts  tavily.ts  webSearch.ts
src/store/: useChatStore.ts  useMcpStore.ts  useMemoryStore.ts  useSettingsStore.ts  useToastStore.ts
src/types/: chat.ts  memory.ts
