[package]
name = "jessie_desktop"
version = "0.1.0"
description = "Minimal desktop AI chat"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
